; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bsnmp/snmpd/extr_config.c_parse_syntax_counter64.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bsnmp/snmpd/extr_config.c_parse_syntax_counter64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snmp_value = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@token = common dso_local global i64 0, align 8
@TOK_NUM = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [21 x i8] c"bad COUNTER64 syntax\00", align 1
@numval = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snmp_value*)* @parse_syntax_counter64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @parse_syntax_counter64(%struct.snmp_value* %0) #0 {
  %2 = alloca %struct.snmp_value*, align 8
  store %struct.snmp_value* %0, %struct.snmp_value** %2, align 8
  %3 = load i64, i64* @token, align 8
  %4 = load i64, i64* @TOK_NUM, align 8
  %5 = icmp ne i64 %3, %4
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = call i32 @report(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  br label %8

8:                                                ; preds = %6, %1
  %9 = load i32, i32* @numval, align 4
  %10 = load %struct.snmp_value*, %struct.snmp_value** %2, align 8
  %11 = getelementptr inbounds %struct.snmp_value, %struct.snmp_value* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store i32 %9, i32* %12, align 4
  %13 = call i32 (...) @gettoken()
  ret void
}

declare dso_local i32 @report(i8*) #1

declare dso_local i32 @gettoken(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
